--- a/workflowhegel.css
+++ b/workflowhegel.css
@@ -38,3 +38,31 @@ section table {
   section table th {
     background-color: #4d768a;
   }
+
+/*-----------------------PETER----------------------------*/
+section::before {
+  display: block;
+  content: '';
+  width: 300px;
+  height: 100px;
+  background-image: url('https://cdn.jsdelivr.net/gh/tempso/peter-image@main/images/twinleaf.png');
+  background-repeat: no-repeat;
+  background-position: top 15px right 30px;
+  background-size: 150px auto;
+  position: absolute;
+  right: 30px;
+  top: 10px;
+}
+
+section a {
+      font-size: 30px;
+}
+section h1 {
+    font-size: 28px;
+}
+section p {
+    font-size: 22px;
+}
+section ul li {
+    font-size: 24px;
+}
